--- a/fltk-1.3.0/configure.in
+++ b/fltk-1.3.0/configure.in
@@ -675,7 +675,7 @@ AC_ARG_ENABLE(localzlib, [  --enable-localzlib      use local ZLIB library, defa
 syszlib_ok=no
 syszinc_ok=no
 if test x$enable_localzlib != xyes; then
-    AC_CHECK_LIB(z,gzgets,
+    AC_CHECK_LIB(z,z_gzgets,
 	[AC_CHECK_HEADER(zlib.h, 
 		syszinc_ok=yes)
 	if test x$syszinc_ok = xyes; then
@@ -923,7 +923,7 @@ case $uname_GUI in
 	    AC_MSG_WARN(Ignoring libraries \"$X_PRE_LIBS\" requested by configure.)
 	fi
 
-	LIBS="$LIBS -lNX11 -lnano-X -ltiff -lt1 -ljpeg $X_EXTRA_LIBS"
+	LIBS="$LIBS -lX11 -lnano-X -ltiff -lt1 $X_EXTRA_LIBS"
 	CFLAGS="$CFLAGS $X_CFLAGS"
 	CXXFLAGS="$CXXFLAGS $X_CFLAGS"
 	LDFLAGS="$X_LIBS $LDFLAGS"
