--- a/fltk-1.3.0/configure.in
+++ b/fltk-1.3.0/configure.in
@@ -923,7 +923,7 @@ case $uname_GUI in
 	    AC_MSG_WARN(Ignoring libraries \"$X_PRE_LIBS\" requested by configure.)
 	fi
 
-	LIBS="$LIBS -lX11 -lnano-X -ltiff -lt1 $X_EXTRA_LIBS"
+	LIBS="$LIBS -lX11 -lnano-X -ltiff -lfreetype -lt1 $X_EXTRA_LIBS"
 	CFLAGS="$CFLAGS $X_CFLAGS"
 	CXXFLAGS="$CXXFLAGS $X_CFLAGS"
 	LDFLAGS="$X_LIBS $LDFLAGS"
